# Parallel

./: CMakeLists.txt  Doxyfile.in  README.md
include/: CMakeLists.txt
include/Parallel/: Chrono.hpp  Communicator  Communicator.hpp  Communicator.hpp~  Communicator.tpp  Communicator.tpp~  Communicator_mpi.tpp  Communicator_stub.tpp  Constantes.hpp  Constantes.hpp~  Context.hpp  Context.hpp~  DetectContainer.hpp  LogToFile.hpp  LogToStdErr.hpp  LogToStdOutput.hpp  Logger.hpp  NullStream.hpp  Operator.hpp  Parallel.hpp  Request.hpp  Status.hpp
src/: CMakeLists.txt  Communicator.cpp  Context.cpp  LogToFile.cpp  LogToStdErr.cpp  LogToStdOutput.cpp  Logger.cpp
tests/: CMakeLists.txt  test_communicator.cpp  test_prodMatMat.cpp
